[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_0x0x0"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_0x0x0")

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PausePanel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Restart Game"
focus_mode = 2

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
focus_mode = 2
